fixed scroll overflowing

--- a/public/style.css
+++ b/public/style.css
@@ -38,7 +38,7 @@ body
     position: absolute;
     z-index: 11;
     background-color: whitesmoke;
-    width: 450px;
+    width: 500px;
     height: 90.5%;
     right: 0px;
     top: 0;
